updated create account button

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
     <div class="flex flex-row h-[250px] w-[1033px] ml-[50px] bg-black">
 
         <div>
-            <div class="pt-[20px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center gap-[10px] rounded-[65px] bg-neutral-50 hover:bg-neutral-200 disabled:bg-neutral-500 shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold">Create account</span></button></div>
-            <div class="pt-[20px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center gap-[10px] rounded-[65px] bg-neutral-200 shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold">Create account</span></button></div>
-            <div class="pt-[25px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center gap-[10px] rounded-[65px] bg-neutral-500 shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold">Create account</span></button></div>
-            <div class="pt-[20px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center gap-[10px] rounded-[65px] border-solid border-[1px] border-stroke shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold text-twitter-blue-default">Sign up</span></button></div>
+            <div class="pt-[20px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center self-stretch gap-[10px] rounded-[65px] bg-neutral-50 hover:bg-neutral-200 disabled:bg-neutral-500 shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold text-neutral-1000">Create account</span></button></div>
+            <div class="pt-[20px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center self-stretch gap-[10px] rounded-[65px] bg-neutral-200 shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold">Create account</span></button></div>
+            <div class="pt-[25px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center self-stretch gap-[10px] rounded-[65px] bg-neutral-500 shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold">Create account</span></button></div>
+            <div class="pt-[20px] pl-[20px]"><button class="flex h-[35px] w-[334px] px-[24px] py-[8px] justify-center items-center self-stretch gap-[10px] rounded-[65px] border-solid border border-stroke shadow-[0_8px_16px_0_rgba(0,0,0,0.25)] backdrop-blur-[23.668209075927734px]"><span class="font-bold text-twitter-blue-default">Sign up</span></button></div>
         </div>
 
 
